docs/2.0.1/_sources/api/gammapy.maps.TimeMapAxis.rst.txt
TimeMapAxis
===========

.. currentmodule:: gammapy.maps

.. autoclass:: TimeMapAxis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TimeMapAxis.as_plot_center
      ~TimeMapAxis.as_plot_edges
      ~TimeMapAxis.as_plot_labels
      ~TimeMapAxis.as_plot_xerr
      ~TimeMapAxis.bin_width
      ~TimeMapAxis.bounds
      ~TimeMapAxis.center
      ~TimeMapAxis.edges
      ~TimeMapAxis.edges_max
      ~TimeMapAxis.edges_min
      ~TimeMapAxis.interp
      ~TimeMapAxis.is_contiguous
      ~TimeMapAxis.iter_by_edges
      ~TimeMapAxis.name
      ~TimeMapAxis.nbin
      ~TimeMapAxis.node_type
      ~TimeMapAxis.reference_time
      ~TimeMapAxis.time_bounds
      ~TimeMapAxis.time_delta
      ~TimeMapAxis.time_edges
      ~TimeMapAxis.time_format
      ~TimeMapAxis.time_max
      ~TimeMapAxis.time_mid
      ~TimeMapAxis.time_min
      ~TimeMapAxis.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~TimeMapAxis.assert_name
      ~TimeMapAxis.coord_to_idx
      ~TimeMapAxis.coord_to_pix
      ~TimeMapAxis.copy
      ~TimeMapAxis.downsample
      ~TimeMapAxis.format_plot_xaxis
      ~TimeMapAxis.from_gti
      ~TimeMapAxis.from_gti_bounds
      ~TimeMapAxis.from_table
      ~TimeMapAxis.from_time_bounds
      ~TimeMapAxis.from_time_edges
      ~TimeMapAxis.group_table
      ~TimeMapAxis.is_aligned
      ~TimeMapAxis.is_allclose
      ~TimeMapAxis.pix_to_coord
      ~TimeMapAxis.pix_to_idx
      ~TimeMapAxis.slice
      ~TimeMapAxis.squash
      ~TimeMapAxis.to_contiguous
      ~TimeMapAxis.to_gti
      ~TimeMapAxis.to_header
      ~TimeMapAxis.to_table
      ~TimeMapAxis.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: as_plot_center
   .. autoattribute:: as_plot_edges
   .. autoattribute:: as_plot_labels
   .. autoattribute:: as_plot_xerr
   .. autoattribute:: bin_width
   .. autoattribute:: bounds
   .. autoattribute:: center
   .. autoattribute:: edges
   .. autoattribute:: edges_max
   .. autoattribute:: edges_min
   .. autoattribute:: interp
   .. autoattribute:: is_contiguous
   .. autoattribute:: iter_by_edges
   .. autoattribute:: name
   .. autoattribute:: nbin
   .. autoattribute:: node_type
   .. autoattribute:: reference_time
   .. autoattribute:: time_bounds
   .. autoattribute:: time_delta
   .. autoattribute:: time_edges
   .. autoattribute:: time_format
   .. autoattribute:: time_max
   .. autoattribute:: time_mid
   .. autoattribute:: time_min
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: assert_name
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: downsample
   .. automethod:: format_plot_xaxis
   .. automethod:: from_gti
   .. automethod:: from_gti_bounds
   .. automethod:: from_table
   .. automethod:: from_time_bounds
   .. automethod:: from_time_edges
   .. automethod:: group_table
   .. automethod:: is_aligned
   .. automethod:: is_allclose
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: slice
   .. automethod:: squash
   .. automethod:: to_contiguous
   .. automethod:: to_gti
   .. automethod:: to_header
   .. automethod:: to_table
   .. automethod:: upsample
